# UIVideo

./: CMakeLists.txt  MVP.pro  OurVideoPlayer.pro.user.5c2f8e4  README.md  add_video.h  buttons.cpp  buttons.h  editwindow.cpp  editwindow.h  editwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  resource.qrc  resources.qrc  search.cpp  search.h  thumbnail.cpp  thumbnail.h  tomeo.cpp  userwindow.cpp  userwindow.h  userwindow.ui  video_control.cpp  videowidget.cpp  videowidget.h  widget.cpp  widget.ui
UIVideo/: OurVideoPlayer.pro  resource.qrc  the_button.cpp  the_button.h  the_player.cpp  the_player.h  videowidget.cpp  videowidget.h  widget.cpp  widget.h  widget.ui
